# plaid

./: .git-blame-ignore-revs  .gitignore  .mcp.json  CLAUDE.md  EXTEND_VERIFICATION_TO_VOCAB  MAKE_BULK_VOCAB_ITEM  MORPH_FEATS_STRUCTURED_VS_STRINGS  PlaidClient.d.ts  PlaidClient.js  README.md  bb.edn  deps.edn  index.html  openapi.json
bb/: pipeline.clj
docs/: README.md  book.adoc  design.md  dev.adoc  extract-api-docs.js  index.adoc  landing.adoc  manual.adoc  manual.html
flan/: package.json
githooks/: pre-commit
manual/: index.html
plaid-client-js/: index.d.ts  package.json
plaid-client-py/: pyproject.toml
plaid-client-py/src/plaid_client/: __init__.py  client.py  http.py  provenance.py  roles.py  service.py  service_schema.py  services.py  sse.py  transforms.py
plaid-client-py/src/plaid_client/workflows/: __init__.py
plaid-client-py/src/plaid_client/workflows/asr/: alignment_processor.py
plaid-client-py/src/plaid_client/workflows/tokenization/: token_processor.py
plaid-client-py/tests/: test_audit_message.py  test_audit_message_coverage.py  test_batch.py  test_pagination.py  test_roles.py  test_service.py  test_transforms.py
plaid-core/: .gitignore  .mcp.json  CLAUDE.md  deps.edn
plaid-igt/: .gitignore  CLAUDE.md  components.json  eslint.config.js  index.html  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
plaid-ud/: .gitignore  CLAUDE.md  README.md  client.py  eslint.config.js  index.html  package.json  parser_service.py  playwright.config.js  postcss.config.cjs  vite.config.js
src/: deps.edn  (+1 more)
(+889 files in other folders)
