[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaid-client"
version = "0.1.0"
description = "Python client for the Plaid annotation API"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/plaid_client"]
